2019-01-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Happy new year!

2018-12-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/glfwmaster_build_dylib.sh: Added.

2018-12-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2018-09-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2018-08-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2018-04-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.3 features.
	* Updated gl.xml.

2018-03-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2018-02-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Fix NoMethodError when calling wglGetProcAddress ( Thanks: https://github.com/larskanis )

2018-01-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-11-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-10-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-08-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.3 features.

2017-08-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-08-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* OpenGL 4.6

2017-06-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-06-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-04-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-03-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2017-02-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* generator/aux_generate_typemap.rb, aux_typemap.rb (VULKANPROCNV): Added VULKANPROCNV support.
	* generator/get_gl_xml.rb: Fixed URL to fetch 'gl.xml'.

2017-02-18  vaiorabbit  <http://twitter.com/vaiorabbit>
