@@ -5,7 +5,7 @@
 ...and wrapper code generator.
 
 *   Created : 2013-08-28
-*   Last modified : 2018-12-22
+*   Last modified : 2019-01-19
 
 [![Gem Version](https://badge.fury.io/rb/opengl-bindings.svg)](https://badge.fury.io/rb/opengl-bindings) [![Gem](https://img.shields.io/gem/dt/opengl-bindings.svg)](opengl-bindings)
 
@@ -108,6 +108,7 @@ Use GLFW or GLUT for creating windows and OpenGL rendering contexts.
 ## Tested Environment ##
 
 *   Ruby
+    *   ruby 2.6.0p0 (2018-12-25 revision 66547) [x86_64-darwin18]
     *   ruby 2.5.1p57 (2018-03-29 revision 63029) [x86_64-darwin17]
     *   ruby 2.5.0p0 (2017-12-25 revision 61468) [x86_64-darwin17]
     *   ruby 2.4.1p111 (2017-03-22 revision 58053) [x86_64-darwin16]
@@ -227,7 +228,7 @@ Use GLFW or GLUT for creating windows and OpenGL rendering contexts.
 
 The zlib/libpng License ( http://opensource.org/licenses/Zlib ).
 
-    Copyright (c) 2013-2018 vaiorabbit <http://twitter.com/vaiorabbit>
+    Copyright (c) 2013-2019 vaiorabbit <http://twitter.com/vaiorabbit>
 
     This software is provided 'as-is', without any express or implied
     warranty. In no event will the authors be held liable for any damages
@@ -350,6 +351,7 @@ GLFW か GLUT を用意してください。ウィンドウやレンダリング
 ## テストした環境 ##
 
 *   Ruby
+    *   ruby 2.6.0p0 (2018-12-25 revision 66547) [x86_64-darwin18]
     *   ruby 2.5.1p57 (2018-03-29 revision 63029) [x86_64-darwin17]
     *   ruby 2.5.0p0 (2017-12-25 revision 61468) [x86_64-darwin17]
     *   ruby 2.4.1p111 (2017-03-22 revision 58053) [x86_64-darwin16]
