@@ -268,6 +268,7 @@ module GLFW
   GLFW_CENTER_CURSOR           = 0x00020009 # Available since GLFW 3.3
   GLFW_TRANSPARENT_FRAMEBUFFER = 0x0002000A # Available since GLFW 3.3
   GLFW_HOVERED                 = 0x0002000B # Available since GLFW 3.3
+  GLFW_FOCUS_ON_SHOW           = 0x0002000C # Available since GLFW 3.3
 
   GLFW_RED_BITS          = 0x00021001
   GLFW_GREEN_BITS        = 0x00021002
@@ -297,6 +298,7 @@ module GLFW
   GLFW_CONTEXT_RELEASE_BEHAVIOR  = 0x00022009
   GLFW_CONTEXT_NO_ERROR          = 0x0002200A
   GLFW_CONTEXT_CREATION_API      = 0x0002200B # Available since GLFW 3.2
+  GLFW_SCALE_TO_MONITOR          = 0x0002200C # Available since GLFW 3.3
 
   GLFW_COCOA_RETINA_FRAMEBUFFER = 0x00023001 # Available since GLFW 3.3
   GLFW_COCOA_FRAME_NAME         = 0x00023002 # Available since GLFW 3.3
@@ -384,62 +386,65 @@ module GLFW
     end
   end
 
-  GLFWerrorfun_cb_args             = [Fiddle::TYPE_INT, Fiddle::TYPE_VOIDP]
-  GLFWerrorfun_cb_retval           = Fiddle::TYPE_VOID
-  GLFWwindowposfun_cb_args         = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
-  GLFWwindowposfun_cb_retval       = Fiddle::TYPE_VOID
-  GLFWwindowsizefun_cb_args        = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
-  GLFWwindowsizefun_cb_retval      = Fiddle::TYPE_VOID
-  GLFWwindowclosefun_cb_args       = [Fiddle::TYPE_VOIDP]
-  GLFWwindowclosefun_cb_retval     = Fiddle::TYPE_VOID
-  GLFWwindowrefreshfun_cb_args     = [Fiddle::TYPE_VOIDP]
-  GLFWwindowrefreshfun_cb_retval   = Fiddle::TYPE_VOID
-  GLFWwindowfocusfun_cb_args       = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT]
-  GLFWwindowfocusfun_cb_retval     = Fiddle::TYPE_VOID
-  GLFWwindowiconifyfun_cb_args     = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT]
-  GLFWwindowiconifyfun_cb_retval   = Fiddle::TYPE_VOID
-  GLFWframebuffersizefun_cb_args   = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
-  GLFWframebuffersizefun_cb_retval = Fiddle::TYPE_VOID
-  GLFWmousebuttonfun_cb_args       = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
-  GLFWmousebuttonfun_cb_retval     = Fiddle::TYPE_VOID
-  GLFWcursorposfun_cb_args         = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_DOUBLE, Fiddle::TYPE_DOUBLE]
-  GLFWcursorposfun_cb_retval       = Fiddle::TYPE_VOID
-  GLFWcursorenterfun_cb_args       = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT]
-  GLFWcursorenterfun_cb_retval     = Fiddle::TYPE_VOID
-  GLFWscrollfun_cb_args            = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_DOUBLE, Fiddle::TYPE_DOUBLE]
-  GLFWscrollfun_cb_retval          = Fiddle::TYPE_VOID
-  GLFWkeyfun_cb_args               = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
-  GLFWkeyfun_cb_retval             = Fiddle::TYPE_VOID
-  GLFWcharfun_cb_args              = [Fiddle::TYPE_VOIDP, -Fiddle::TYPE_INT]
-  GLFWcharfun_cb_retval            = Fiddle::TYPE_VOID
-  GLFWcharmodsfun_cb_args          = [Fiddle::TYPE_VOIDP, -Fiddle::TYPE_INT, Fiddle::TYPE_INT]  # Available since GLFW 3.1
-  GLFWcharmodsfun_cb_retval        = Fiddle::TYPE_VOID                                          # Available since GLFW 3.1
-  GLFWdropfun_cb_args              = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_VOIDP] # Available since GLFW 3.1
-  GLFWdropfun_cb_retval            = Fiddle::TYPE_VOID                                          # Available since GLFW 3.1
-  GLFWmonitorfun_cb_args           = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT]                     # Available since GLFW 3.0
-  GLFWmonitorfun_cb_retval         = Fiddle::TYPE_VOID                                          # Available since GLFW 3.0
-  GLFWjoystickfun_cb_args          = [Fiddle::TYPE_INT, Fiddle::TYPE_INT]                       # Available since GLFW 3.2
-  GLFWjoystickfun_cb_retval        = Fiddle::TYPE_VOID                                          # Available since GLFW 3.2
+  GLFWerrorfun_cb_args                = [Fiddle::TYPE_INT, Fiddle::TYPE_VOIDP]
+  GLFWerrorfun_cb_retval              = Fiddle::TYPE_VOID
+  GLFWwindowposfun_cb_args            = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
+  GLFWwindowposfun_cb_retval          = Fiddle::TYPE_VOID
+  GLFWwindowsizefun_cb_args           = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
+  GLFWwindowsizefun_cb_retval         = Fiddle::TYPE_VOID
+  GLFWwindowclosefun_cb_args          = [Fiddle::TYPE_VOIDP]
+  GLFWwindowclosefun_cb_retval        = Fiddle::TYPE_VOID
+  GLFWwindowrefreshfun_cb_args        = [Fiddle::TYPE_VOIDP]
+  GLFWwindowrefreshfun_cb_retval      = Fiddle::TYPE_VOID
+  GLFWwindowfocusfun_cb_args          = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT]
+  GLFWwindowfocusfun_cb_retval        = Fiddle::TYPE_VOID
+  GLFWwindowiconifyfun_cb_args        = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT]
+  GLFWwindowiconifyfun_cb_retval      = Fiddle::TYPE_VOID
+  GLFWframebuffersizefun_cb_args      = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
+  GLFWframebuffersizefun_cb_retval    = Fiddle::TYPE_VOID
+  GLFWwindowcontentscalefun_cb_args   = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_FLOAT, Fiddle::TYPE_FLOAT] # Available since GLFW 3.3
+  GLFWwindowcontentscalefun_cb_retval = Fiddle::TYPE_VOID                                            # Available since GLFW 3.3
+  GLFWmousebuttonfun_cb_args          = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
+  GLFWmousebuttonfun_cb_retval        = Fiddle::TYPE_VOID
+  GLFWcursorposfun_cb_args            = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_DOUBLE, Fiddle::TYPE_DOUBLE]
+  GLFWcursorposfun_cb_retval          = Fiddle::TYPE_VOID
+  GLFWcursorenterfun_cb_args          = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT]
+  GLFWcursorenterfun_cb_retval        = Fiddle::TYPE_VOID
+  GLFWscrollfun_cb_args               = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_DOUBLE, Fiddle::TYPE_DOUBLE]
+  GLFWscrollfun_cb_retval             = Fiddle::TYPE_VOID
+  GLFWkeyfun_cb_args                  = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_INT, Fiddle::TYPE_INT, Fiddle::TYPE_INT]
+  GLFWkeyfun_cb_retval                = Fiddle::TYPE_VOID
+  GLFWcharfun_cb_args                 = [Fiddle::TYPE_VOIDP, -Fiddle::TYPE_INT]
+  GLFWcharfun_cb_retval               = Fiddle::TYPE_VOID
+  GLFWcharmodsfun_cb_args             = [Fiddle::TYPE_VOIDP, -Fiddle::TYPE_INT, Fiddle::TYPE_INT]    # Available since GLFW 3.1
+  GLFWcharmodsfun_cb_retval           = Fiddle::TYPE_VOID                                            # Available since GLFW 3.1
+  GLFWdropfun_cb_args                 = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT, Fiddle::TYPE_VOIDP]   # Available since GLFW 3.1
+  GLFWdropfun_cb_retval               = Fiddle::TYPE_VOID                                            # Available since GLFW 3.1
+  GLFWmonitorfun_cb_args              = [Fiddle::TYPE_VOIDP, Fiddle::TYPE_INT]                       # Available since GLFW 3.0
+  GLFWmonitorfun_cb_retval            = Fiddle::TYPE_VOID                                            # Available since GLFW 3.0
+  GLFWjoystickfun_cb_args             = [Fiddle::TYPE_INT, Fiddle::TYPE_INT]                         # Available since GLFW 3.2
+  GLFWjoystickfun_cb_retval           = Fiddle::TYPE_VOID                                            # Available since GLFW 3.2
 
   @@glfw_cb_closure_signature = {
-    :GLFWerrorfun           => [GLFWerrorfun_cb_retval, GLFWerrorfun_cb_args],
-    :GLFWwindowposfun       => [GLFWwindowposfun_cb_retval, GLFWwindowposfun_cb_args],
-    :GLFWwindowsizefun      => [GLFWwindowsizefun_cb_retval, GLFWwindowsizefun_cb_args],
-    :GLFWwindowclosefun     => [GLFWwindowclosefun_cb_retval, GLFWwindowclosefun_cb_args],
-    :GLFWwindowrefreshfun   => [GLFWwindowrefreshfun_cb_retval, GLFWwindowrefreshfun_cb_args],
-    :GLFWwindowfocusfun     => [GLFWwindowfocusfun_cb_retval, GLFWwindowfocusfun_cb_args],
-    :GLFWwindowiconifyfun   => [GLFWwindowiconifyfun_cb_retval, GLFWwindowiconifyfun_cb_args],
-    :GLFWframebuffersizefun => [GLFWframebuffersizefun_cb_retval, GLFWframebuffersizefun_cb_args],
-    :GLFWmousebuttonfun     => [GLFWmousebuttonfun_cb_retval, GLFWmousebuttonfun_cb_args],
-    :GLFWcursorposfun       => [GLFWcursorposfun_cb_retval, GLFWcursorposfun_cb_args],
-    :GLFWcursorenterfun     => [GLFWcursorenterfun_cb_retval, GLFWcursorenterfun_cb_args],
-    :GLFWscrollfun          => [GLFWscrollfun_cb_retval, GLFWscrollfun_cb_args],
-    :GLFWkeyfun             => [GLFWkeyfun_cb_retval, GLFWkeyfun_cb_args],
-    :GLFWcharfun            => [GLFWcharfun_cb_retval, GLFWcharfun_cb_args],
-    :GLFWcharmodsfun        => [GLFWcharmodsfun_cb_retval, GLFWcharmodsfun_cb_args], # Available since GLFW 3.1
-    :GLFWdropfun            => [GLFWdropfun_cb_retval, GLFWdropfun_cb_args],         # Available since GLFW 3.1
-    :GLFWmonitorfun         => [GLFWmonitorfun_cb_retval, GLFWmonitorfun_cb_args],
-    :GLFWjoystickfun        => [GLFWjoystickfun_cb_retval, GLFWjoystickfun_cb_args], # Available since GLFW 3.2
+    :GLFWerrorfun              => [GLFWerrorfun_cb_retval, GLFWerrorfun_cb_args],
+    :GLFWwindowposfun          => [GLFWwindowposfun_cb_retval, GLFWwindowposfun_cb_args],
+    :GLFWwindowsizefun         => [GLFWwindowsizefun_cb_retval, GLFWwindowsizefun_cb_args],
+    :GLFWwindowclosefun        => [GLFWwindowclosefun_cb_retval, GLFWwindowclosefun_cb_args],
+    :GLFWwindowrefreshfun      => [GLFWwindowrefreshfun_cb_retval, GLFWwindowrefreshfun_cb_args],
+    :GLFWwindowfocusfun        => [GLFWwindowfocusfun_cb_retval, GLFWwindowfocusfun_cb_args],
+    :GLFWwindowiconifyfun      => [GLFWwindowiconifyfun_cb_retval, GLFWwindowiconifyfun_cb_args],
+    :GLFWframebuffersizefun    => [GLFWframebuffersizefun_cb_retval, GLFWframebuffersizefun_cb_args],
+    :GLFWwindowcontentscalefun => [GLFWwindowcontentscalefun_cb_retval, GLFWwindowcontentscalefun_cb_args], # Available since GLFW 3.3
+    :GLFWmousebuttonfun        => [GLFWmousebuttonfun_cb_retval, GLFWmousebuttonfun_cb_args],
+    :GLFWcursorposfun          => [GLFWcursorposfun_cb_retval, GLFWcursorposfun_cb_args],
+    :GLFWcursorenterfun        => [GLFWcursorenterfun_cb_retval, GLFWcursorenterfun_cb_args],
+    :GLFWscrollfun             => [GLFWscrollfun_cb_retval, GLFWscrollfun_cb_args],
+    :GLFWkeyfun                => [GLFWkeyfun_cb_retval, GLFWkeyfun_cb_args],
+    :GLFWcharfun               => [GLFWcharfun_cb_retval, GLFWcharfun_cb_args],
+    :GLFWcharmodsfun           => [GLFWcharmodsfun_cb_retval, GLFWcharmodsfun_cb_args], # Available since GLFW 3.1
+    :GLFWdropfun               => [GLFWdropfun_cb_retval, GLFWdropfun_cb_args],         # Available since GLFW 3.1
+    :GLFWmonitorfun            => [GLFWmonitorfun_cb_retval, GLFWmonitorfun_cb_args],
+    :GLFWjoystickfun           => [GLFWjoystickfun_cb_retval, GLFWjoystickfun_cb_args], # Available since GLFW 3.2
   }
 
   # Creates a callback as an instance of Fiddle::Closure::BlockCaller
