@@ -1,3 +1,7 @@
+2019-01-19  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* glfw.rb: Added GLFW 3.3 features.
+
 2019-01-05  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Happy new year!
